--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -6,4 +6,5 @@
 			<input [(ngModel)]="hero.name" placeholder="Hero name">
 		</label>
 	</div>
+	<button (click)="goBack()">go back</button>
 </div>
