--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,8 @@
     <a routerLink="/dashboard">Dashboard</a>
     |
     <a routerLink="/heroes">Heroes</a>
+    |
+    <a routerLink="/users">Users</a>
 </nav>
 <router-outlet></router-outlet>
 <app-messages></app-messages>
